--- a/index.html
+++ b/index.html
@@ -14,9 +14,70 @@
         <img src="./img/pexels-bill-emrich-230794-1.jpg" alt="">
         <img src="./img/pexels-bill-emrich-230794-2.jpg" alt="">
         <hr>
-
     </header>
     <main>
+        <h2>Le mie spese</h2>
+        <p>
+            <table>
+                <thead>
+                    <tr>
+                        <th>
+                            Numero
+                        </th>
+                        <th>
+                            Descrizione
+                        </th>
+                        <th>
+                            Costo
+                        </th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>
+                            1
+                        </td>
+                        <td>
+                            Biglietto aereo
+                        </td>
+                        <td>
+                            120&#8364
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            1
+                        </td>
+                        <td>
+                            Biglietto aereo
+                        </td>
+                        <td>
+                            120&#8364
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            1
+                        </td>
+                        <td>
+                            Biglietto aereo
+                        </td>
+                        <td>
+                            120&#8364
+                        </td>
+                    </tr>
+                    <tr>
+                        <td colspan="2">
+                            Totale
+                        </td>
+                        <td>
+                            360&#8364
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </p>
+        <hr>
 
     </main>
     
