--- a/index.html
+++ b/index.html
@@ -78,6 +78,46 @@
             </table>
         </p>
         <hr>
+        <h2>Cose da fare </h2>
+        <p>
+            <ul>
+                <li>Visitare la Tower of London &#9747</li>
+                <li>Visitare Greenwich &#10003</li>
+                <li>Ascoltare un artista di strada a Covent Garden &#10003</li>
+                <li>mangiare il tipico Fish and Chips inglese &#9747</li>
+            </ul>
+        </p>
+        <hr>
+        <h2>Info utili:</h2>
+        <p>
+            <ol>
+                <li>
+                    Numeri utili di emergenza
+                    <ul>
+                        <li><strong>999</strong> - Emergenza</li>
+                        <li><strong>101</strong> - Polizia</li>
+                        <li><strong>111</strong> - Assistenza medica</li>
+                    </ul>
+                </li>
+                <li>
+                    Hotel
+                    <ul>
+                        <li><strong>Nome hotel</strong>: Buckingham Palace</li>
+                        <li><strong>Indirizzo hotel</strong>: Westmiste, London, Regno Unito</li>
+                    </ul>
+                </li>
+                <li>
+                    Aereo
+                    <ul>
+                        <li><strong>Volo di andata</strong>: alle 9.30 da Milano Malpensa</li>
+                        <li><strong>Volo di ritorno</strong>: alle 18.30 da London Heathrow</li>
+                    </ul>
+                </li>
+            </ol>
+        </p>
+        <hr>
+        
+
 
     </main>
     
